# CS_AI_RESULT_CHECKER

./: build.sh  pyproject.toml
.github/workflows/: main.yml
results_checker/: app.py
results_checker/check_all_results_completed/: check_all_results_completed.py
results_checker/check_results/: check_results.py
results_checker/dynamo_db/: dynamo_db.py
results_checker/sns/: sns.py
results_checker/utils/: stats.py
